Update project configurations

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,7 @@ img {
     --clr-salmon-400: #FF7979;
     --clr-green-400: #38CC8B;
     --clr-green-600: #77E2B3;
-    --clr-purple-50: #3D3B48;;
+    --clr-purple-50: #3D3B48;
     --clr-purple-100: #5E54A4;
     --clr-purple-800: #BAB7D4;
 }
