--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,13 @@ img {
 
 @font-face {
     font-family: Poppins;
+    src: url("../fonts/Poppins-MediumItalic.ttf");
+    font-style: italic;
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: Poppins;
     src: url("../fonts/Poppins-SemiBold.ttf");
     font-style: normal;
     font-weight: 600;
